--- a/index.html
+++ b/index.html
@@ -4,37 +4,120 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>WebRTC Example by HPV</title>
-        <meta name="description" content="">
+        <meta name="description" content="WebRTC Example by HPV">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://webrtc.kyso.dev/style.css">
+        <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/darkly/bulmaswatch.min.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     </head>
     <body>
-
         <div class="container">
-            <div class="grid-item">
-                <div class="user-container">
-                    <div id="user1-name">
-                        <p>User1</p>
+            <div class="columns">
+                <div class="column">
+                    <div class="title has-text-centered">
+                        WebRTC Test Platform
                     </div>
-                    <video autoplay="true" id="user1-webcam">
-                    </video>
-                </div>
-            </div>
-            <div class="grid-item">
-                <div class="user-container">
-                    <div id="user2-name">
-                        <p>User2</p>
+                    <div class="subtitle has-text-centered">
+                        By HPV
                     </div>
-                    <video autoplay="true" id="user2-webcam">
-                    </video>
                 </div>
             </div>
 
+            <!-- Room Display -->
+            <div class="card">
+                <div class="columns">
+                    <div class="column">
+                        <div class="has-text-centered title" id="connected">
+                            Active Rooms - Connected 0
+                        </div>
+                    </div>
+                </div>
+
+                <!--Room Header Info-->
+                <div class="columns">
+                    <div class="column is-narrow">
+                        Participants
+                    </div>
+                    <div class="column is-four-fifths">
+                        Room Name
+                    </div>
+                </div>
+
+                <!--Rooms -->
+                <div class="columns">
+                    <div class="column scrollable" id="rooms">
+
+                    </div>
+                </div>
             </div>
+
+            <hr>
+            <!--Create a new room form-->
+            <div class="columns">
+                <div class="column">
+                    <form class="box" id="submit" action="/room" method="post">
+                        <div class="field is-grouped">
+                            <div class="control is-expanded">
+                                <input class="input is-primary" name="room_name" type="text" value="Submit" id="create_text" placeholder="Create a room">
+                            </div>
+                        </div>
+
+
+                        <div class="control is-grouped ">
+                            <a class="button is-primary" id="create_btn">Create Room</a>
+                            <a class="button is-danger" id="random_btn">Random Room</a>
+
+                            <div class="is-pulled-right">
+                                <span class="is-size-4">Participants</span>
+                                <span class="select">
+                                    <select name="participants">
+                                        <option selected>2</option>
+                                        <option>3</option>
+                                        <option>4</option>
+                                    </select>
+                                </span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
         </div>
+            <footer class="footer is-fixed-bottom">
+                <div class="content has-text-centered">
+                    <p>
+                        This WebRTC test example brought to you by <strong>Team HPV</strong>
+                    </p>
+                </div>
+            </footer>
+
+        <script src="https://webrtc.kyso.dev/index.js"></script>
+        <!-- Old room code
+             <div class="container">
+             <div class="grid-item">
+             <div class="user-container">
+             <div id="user1-name">
+             <p>User1</p>
+             </div>
+             <video autoplay="true" id="user1-webcam">
+             </video>
+             </div>
+             </div>
+             <div class="grid-item">
+             <div class="user-container">
+             <div id="user2-name">
+             <p>User2</p>
+             </div>
+             <video autoplay="true" id="user2-webcam">
+             </video>
+             </div>
+             </div>
+
+             </div>
+             </div>
 
 
 
-        <script src="https://webrtc.kyso.dev/webrtc.js"></script>
+             <script src="https://webrtc.kyso.dev/webrtc.js"></script> -->
     </body>
 </html>
