Final commit before project due

--- a/room.html
+++ b/room.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="columns">
                             <div class="column">
-                                <video autoplay="true" width="100%" id="user-webcam"></video>
+                                <video autoplay="true" class="video" width="100%" id="user-webcam"></video>
                             </div>
                         </div>
                         <div class="columns">
@@ -59,7 +59,7 @@
                         </div>
                         <div class="columns">
                             <div class="column">
-                                <video autoplay="true" width="100%" id="user2-webcam"></video>
+                                <video autoplay="true" width="100%" class="video" id="user2-webcam"></video>
                             </div>
                         </div>
                         <div class="columns">
@@ -82,7 +82,7 @@
                         </div>
                         <div class="columns">
                             <div class="column">
-                                <video autoplay="true" width="100%" id="user3-webcam"></video>
+                                <video autoplay="true" width="100%" class="video" id="user3-webcam"></video>
                             </div>
                         </div>
                         <div class="columns">
@@ -104,7 +104,7 @@
                         </div>
                         <div class="columns">
                             <div class="column">
-                                <video autoplay="true" width="100%" id="user4-webcam"></video>
+                                <video autoplay="true" width="100%" class="video" id="user4-webcam"></video>
                             </div>
                         </div>
                         <div class="columns">
